--- a/Blog-Demos/CannedAnimations/nbproject/project.properties
+++ b/Blog-Demos/CannedAnimations/nbproject/project.properties
@@ -81,7 +81,7 @@ javafx.deploy.permissionselevated=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=cannedanimations.CannedAnimations
+javafx.main.class=cannedanimations.app.MainApp
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
