--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,7 @@
-language:
-  - java
+language: java
 
-jdk:
-  - oraclejdk8
+jdk: oraclejdk8
 
 install: true
 
-cache: 
-	directories:
-	-$HOME/.m2
-script:
-  - mvn clean install
+script: mvn clean install
