--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /temp/fxexperience-2-master/FXExperienceTools/target/
 /fxexperience-2-master/FXExperienceControls/target/
 /fxexperience-2-master/FXExperienceTools/target/
+/target/
