--- a/FXExperienceTools/pom.xml
+++ b/FXExperienceTools/pom.xml
@@ -19,6 +19,13 @@
             <artifactId>FXExperienceControls</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>javafx</groupId>
+            <artifactId>jfxrt</artifactId>
+            <version>${java.version}</version>
+	    <scope>system</scope>
+	    <systemPath>${java.home}/lib/ext/jfxrt.jar</systemPath>
+        </dependency>
     </dependencies>
 
 
