--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: java
 
-jdk: Maven 3.2
+jdk: oraclejdk8
 
 install: true
 
 script: mvn clean install
+
+cache:
+  directories:
+  - $HOME/.m2
