--- a/FXExperienceTools/pom.xml
+++ b/FXExperienceTools/pom.xml
@@ -18,13 +18,12 @@
             <groupId>com.fxexperience</groupId>
             <artifactId>FXExperienceControls</artifactId>
             <version>2.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>javafx</groupId>
-            <artifactId>jfxrt</artifactId>
-            <version>${java.version}</version>
-	    <scope>system</scope>
-	    <systemPath>${java.home}/lib/ext/jfxrt.jar</systemPath>
+            <exclusions>
+                <exclusion>
+                    <groupId>javafx</groupId>
+                    <artifactId>jfxrt</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
