--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /fxexperience-2-master/FXExperienceControls/target/
 /fxexperience-2-master/FXExperienceTools/target/
 /target/
+.idea/workspace.xml
+FXExperienceTools/src/test/
