--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /fxexperience-2-master/FXExperienceTools/target/
 /target/
 .idea/workspace.xml
-.idea/
+/.idea/
 nb.configuration.xml
-.directory/
+/.directory/
 FXExperienceTools/src/test/
