--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ language: java
 
 jdk: oraclejdk8
 
+sudo: false
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
+
 install: true
 
 script: mvn clean install
