--- a/FXExperienceTools/pom.xml
+++ b/FXExperienceTools/pom.xml
@@ -139,5 +139,10 @@
             <artifactId>rxjavafx</artifactId>
             <version>0.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
