--- a/FXExperienceTools/pom.xml
+++ b/FXExperienceTools/pom.xml
@@ -124,5 +124,11 @@
             <artifactId>richtextfx</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx-commons</artifactId>
+            <version>9.1.2</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 </project>
