--- a/fxtools/pom.xml
+++ b/fxtools/pom.xml
@@ -131,11 +131,6 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>fxstylepreviwer</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.paintpicker</groupId>
             <artifactId>fxpaintpicker</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -144,6 +139,11 @@
             <groupId>fxwebview</groupId>
             <artifactId>fxcodemirror</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>fxstylepreviewer</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
