medium: styling changes

--- a/fxtools/pom.xml
+++ b/fxtools/pom.xml
@@ -145,5 +145,10 @@
             <artifactId>fxstylepreviewer</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.fxmisc.cssfx</groupId>
+            <artifactId>cssfx</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 </project>
